display some measurements.

--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
   <option value="2x2">2x2</option>
   <option value="3x3">3x3</option>
 </select>
+
+<div class="stats">
+  <textarea class="stat-log"></textarea>
+</div>
+
 </body>
 </html>
